--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   autosender:
-    image: .
+    image: ghcr.io/stufently/avia-search-bot:latest  # Образ из GHCR
     container_name: autosender
     volumes:
       # Монтируем директории с данными
