--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   autosender:
     image: ghcr.io/stufently/avia-search-bot:latest  # Образ из GHCR
-    container_name: autosender
+    container_name: avia-search
     volumes:
       # Монтируем директории с данными
       - ./tdatas:/app/tdatas
